--- a/package.json
+++ b/package.json
@@ -4,12 +4,27 @@
   "description": "Data platform for machine learning -- used to create data (csv) files for machine learning models",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc ./src/index.ts --outDir ./dist/",
+    "start": "node ./dist/index.js"
   },
   "keywords": [
     "Data",
     "Platform"
   ],
   "author": "Francis James Tolentino",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "ts-node-dev": "^2.0.0"
+  }
 }
