--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Francis James Tolentino",
   "license": "ISC",
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "prisma": "^5.0.0",
@@ -24,8 +25,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express-session": "^1.17.7",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0"
   }
