--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
     "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
@@ -34,6 +35,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0"
   }
